--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     height: 105px;
     background: #fff;
     padding: 28px 32px;
+    margin-top: 15px;
     overflow: hidden;
     border-radius: 18px;
     font-family: 'Roboto', sans-serif;
